# socklynx

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Directory.Build.props  LICENSE  README.md  SockLynx.sln  SockLynxCSharp.sln  socklynx.sln
CMake/: slTesting.cmake
SockLynxCSharp/CMakeBuild/: Banner.txt  BannerTask.cs  BuildTasks.targets  CMakeBuild.csproj  CMakeBuild.targets
SockLynxCSharp/Common/: CMake.Content.props
SockLynxCSharp/ConsoleBuild/: BuildCMake.targets  BuildLogger.cs  BuildLogger.targets  BuildTasks.targets  ConsoleBuild.csproj  CoreSdkLocator.targets
SockLynxCSharp/SockLynx/: SockLynx.DSO.targets  SockLynx.Platform.targets  SockLynx.csproj
SockLynxCSharp/SockLynxTests/: SockLynxTests.csproj
UnityProject/Assets/SockLynx/: SockLynx.asmdef
UnityProject/Assets/SockLynx/Scripts/: Native.cs  SockLynx.cs  Util.cs
UnityProject/Assets/SockLynx/Tests/Editor/: SLIntegration.cs  SLManagedUnit.cs  SLNativeUnit.cs  SockLynxTests.asmdef
UnityProject/ProjectSettings/: ProjectSettings.asset
csharp/: SockLynx.cs
csharp/Common/: SockLynx.BuildTasks.targets
csharp/MSBuildTasks/: BannerTask.cs
csharp/SockLynx/: Native.cs  SockLynx.cs  SockLynx.csproj  Util.cs
csharp/SockLynxTests/: SLManagedUnit.cs  SLNativeUnit.cs  SockLynxTests.cs  SockLynxTests.csproj
include/socklynx/: buf.h  common.h  endpoint.h  error.h  sock.h  socklynx.h  socklynx_plugin.h  sys.h  test_harness.h
include/socklynx_loadgen/: loadgen.h
include/socklynx_server/: server.h
src/socklynx/: buf.c  endpoint.c  sock.c  socklynx.c  socklynx_plugin.c  sys.c
src/socklynx_loadgen/: loadgen.c
src/socklynx_server/: server.c
tests/: runner_single.c.in  test_api.c  test_integration.c
